hphp/test/zend/bad/Zend/tests/lsb_007.php
<?php

class Foo implements static {
}

?>
==DONE==